--- a/Collections/MenuCrm Theme/style.css
+++ b/Collections/MenuCrm Theme/style.css
@@ -263,6 +263,17 @@ textarea:focus, input:focus, select:focus, .bootstrap-select .dropdown-toggle:fo
   outline: none !important;
 }
 
+ul.navbar-nav li.orderOnlineNav a {  
+    background-color: white;
+    color: black;
+    border-radius: 50px !important;
+    padding-right: 20px;
+    padding-left: 20px;
+  text-align: center !important;
+   /* test */
+}
+
+
 /*------------------------------------------------------------------
     FOOTER AREA
 -------------------------------------------------------------------*/
@@ -549,3 +560,4 @@ textarea:focus, input:focus, select:focus, .bootstrap-select .dropdown-toggle:fo
         transition: left 500ms ease-in-out;
     }
 }
+
